Partial_14Dec2021/force-app/main/default/objects/Change_Requests__c/Change_Requests__c.object-meta.xml
<CustomObject>
    <description>To track issues or change requests</description>
    <label>Change Request</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Change Requests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>