Partial_14Dec2021/force-app/main/default/objects/Change_Requests__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <inlineHelpText>Task closed date</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>