Partial_14Dec2021/force-app/main/default/objects/Change_Requests__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description about task</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>