Partial_14Dec2021/force-app/main/default/objects/Change_Requests__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <inlineHelpText>Short description about task</inlineHelpText>
    <label>Task Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>