Partial_14Dec2021/force-app/main/default/objects/Change_Requests__c/fields/Task_Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Created_By_Name__c</fullName>
    <label>Task Created By Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>