Partial_14Dec2021/force-app/main/default/objects/Change_Requests__c/fields/Task_Detailed_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Detailed_Status__c</fullName>
    <label>Task Detailed Status</label>
    <type>TextArea</type>
</CustomField>